# red-team-academy

./: .gitignore  CLAUDE.md  Jenkinsfile  astro.config.mjs  fix_urls.py  package-lock.json  package.json  rpi-dropbox-setup.sh
tools/revshell-api/: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
tools/revshell-api/core/: __init__.py  audit.py  auth.py  ratelimit.py  schemas.py  settings.py  validation.py
tools/revshell-api/generators/: __init__.py  adattack.py  anti_forensics.py  awk.py  base.py  bash.py  c2_channels.py  c2profile.py  cloud.py  cradle.py  csharp.py  encode.py  evasion.py  evasion_stack.py  golang.py  harvest.py  initial_access.py  ioc_export.py  lateral.py  linux_harvest.py  linux_persist.py  linux_privesc.py  lolbins.py  lua.py  netcat.py  nim_shell.py  nodejs.py  obfuscate.py  openssl.py  perl.py  persist.py  php.py  powershell.py  privesc.py  python_shell.py  recommender.py  redirector.py  ruby.py  rust_shell.py  sandbox_evasion.py  (+3 more)
tools/revshell-api/routers/: __init__.py  _helpers.py  c2.py  c2_channels.py  chain.py  cloud.py  diff.py  evasion_extended.py  initial_access.py  ioc.py  linux_postex.py  recommend.py  reporting.py  shell.py  stack.py  webshell.py  windows_postex.py
tools/revshell-api/tests/: conftest.py  test_api.py  test_audit.py  test_auth.py  test_c2_channels.py  test_encode.py  test_evasion_elite.py  test_evasion_extended.py  test_generators.py  test_initial_access.py  test_ioc_export.py  test_obfuscate.py  (+7 more)
tools/spray/: Dockerfile  README.md  pyproject.toml  spray.py
(+1089 files in other folders)
