[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "revshell-api"
version = "4.1.0"
description = "Reverse-shell and red-team command generator for authorized engagements."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "slowapi==0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "generators*", "routers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
]
