[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spray"
version = "1.1.0"
description = "Credential spray orchestrator for authorized red team engagements."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests==2.32.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
]

[project.scripts]
spray = "spray:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
